prusti-tests/tests/verify/ui/failing-postcondition.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/failing-postcondition.rs:8:31
  |
8 | #[ensures(something_true() && false)]
  |                               ^^^^^
  |
note: the error originates here
 --> $DIR/failing-postcondition.rs:9:1
  |
9 | fn client(a: u32) {}
  | ^^^^^^^^^^^^^^^^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/failing-postcondition.rs:12:11
   |
12 | #[ensures(result)]
   |           ^^^^^^
   |
note: the error originates here
  --> $DIR/failing-postcondition.rs:13:1
   |
13 | / fn test1() -> bool {
14 | |     false
15 | | }
   | |_^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/failing-postcondition.rs:18:11
   |
18 | #[ensures(x)]
   |           ^
   |
note: the error originates here
  --> $DIR/failing-postcondition.rs:19:1
   |
19 | / fn test2(x: bool) -> bool {
20 | |     x
21 | | }
   | |_^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/failing-postcondition.rs:23:11
   |
23 | #[ensures(a === b)]
   |           ^^^^^^^
   |
note: the error originates here
  --> $DIR/failing-postcondition.rs:24:1
   |
24 | fn test3<T>(a: T, b: T) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

